# ai-ecommerce-integration

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: sample_products.json
docs/: architecture.md
scripts/: enrich.py  search.py  sync.py
src/shopai/: __init__.py  config.py  embed.py  enrich.py  models.py  pipeline.py  search.py
src/shopai/connectors/: __init__.py  base.py  mock.py  shopify.py
tests/: test_connector.py  test_models.py  test_search.py
