[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ecommerce-integration"
version = "0.1.0"
description = "Connect an e-commerce store, then add AI: auto SEO enrichment of products and semantic catalog search."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Arturio Amorim Sobrinho" }]
keywords = ["ecommerce", "shopify", "llm", "seo", "semantic-search", "ai-integration"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
